feat : scored_agent.py

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,13 +22,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📂 현재 Jupyter 작업 디렉토리: /Users/now_ung/workspace/AI/startup-judge-service\n"
+      "📂 현재 Jupyter 작업 디렉토리: /Users/now_ung/workspace/AI/startup-judge-service\n",
+      "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\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "print(\"📂 현재 Jupyter 작업 디렉토리:\", os.getcwd())\n"
+    "print(\"📂 현재 Jupyter 작업 디렉토리:\", os.getcwd())\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "print(api_key)"
    ]
   },
   {
@@ -51,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🧪 추출된 스타트업 리스트: ['Soombit.AI', 'MOAIS', 'MODOODOC', 'Petner', 'Asteromorph']\n"
+      "🧪 추출된 스타트업 리스트: ['Soombit.AI', 'Connecteve', 'Lunit', 'BlueSignum', 'Asteromorph']\n"
      ]
     }
    ],
@@ -81,16 +84,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "68c77aa2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/now_ung/workspace/AI/startup-judge-service/agents/scored_agent.py:8: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  llm = ChatOpenAI(model=\"gpt-4\", temperature=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from state import AgentState\n",
+    "from agents.scored_agent import scorecard_method\n",
+    "\n",
+    "# 테스트용 더미 상태 구성\n",
+    "dummy_state: AgentState = {\n",
+    "    \"country\": \"United States\",\n",
+    "    \"domain\": \"Healthcare\",\n",
+    "    \"startup_list\": [\"Abridge\"],\n",
+    "    \"startup_profiles\": {},\n",
+    "\n",
+    "    \"tech_summary\": {\n",
+    "        \"Abridge\": \"Abridge develops an AI-driven solution for automatic medical documentation. The system transcribes doctor-patient conversations in real-time and generates structured clinical notes with high accuracy.\"\n",
+    "    },\n",
+    "\n",
+    "    \"founder_reputation\": {\n",
+    "        \"Abridge\": {\n",
+    "            \"education\": \"PhD in Computer Science from CMU\",\n",
+    "            \"experience\": \"Former lead at Google Health for 5 years\",\n",
+    "            \"notable\": \"Excellent communicator with deep industry expertise\"\n",
+    "        }\n",
+    "    },\n",
+    "\n",
+    "    \"market_analysis\": {\n",
+    "        \"Abridge\": {\n",
+    "            \"market_size\": \"$2B annually in the US medical transcription market\",\n",
+    "            \"growth_rate\": \"12% CAGR\",\n",
+    "            \"adoption_trend\": \"Rapid digitalization of healthcare records\"\n",
+    "        }\n",
+    "    },\n",
+    "\n",
+    "    \"legal_risk\": {\n",
+    "        \"Abridge\": \"Potential HIPAA compliance risks, but mitigated through encrypted processing and certified cloud storage.\"\n",
+    "    },\n",
+    "\n",
+    "    \"competitor_info\": {\n",
+    "        \"Abridge\": {\n",
+    "            \"competitors\": [\"Suki\", \"Notable Health\"],\n",
+    "            \"differentiation\": \"Focuses specifically on primary care, with voice-to-note optimization and local hospital integration.\"\n",
+    "        }\n",
+    "    },\n",
+    "\n",
+    "    \"investment_decision\": {},\n",
+    "    \"final_report\": \"\"\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5cc2fd33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/now_ung/workspace/AI/startup-judge-service/agents/scored_agent.py:88: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  response = llm([HumanMessage(content=summary)])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📈 투자 판단 결과 for 'Abridge':\n",
+      "🔢 Score: 77.5\n",
+      "✅ Decision: 투자\n",
+      "📝 Reason: 창업자의 품질, 시장 기회, 제품/기술, 경쟁 우위 등이 높게 평가되었고, 법률/규제 위험도 적절히 관리되고 있습니다. 트랙션 정보가 부족하지만, 그 외 요소들이 강력하므로 투자를 결정하였습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_state = scorecard_method(dummy_state)\n",
+    "\n",
+    "startup_name = dummy_state[\"startup_list\"][0]\n",
+    "decision_result = result_state[\"investment_decision\"][startup_name]\n",
+    "\n",
+    "print(f\"📈 투자 판단 결과 for '{startup_name}':\")\n",
+    "print(f\"🔢 Score: {decision_result['score']}\")\n",
+    "print(f\"✅ Decision: {decision_result['decision']}\")\n",
+    "print(f\"📝 Reason: {decision_result['reason']}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc2fd33",
+   "id": "8aed46ef",
    "metadata": {},
    "outputs": [],
    "source": []
