다은 정보 없음 오류 해결

--- a/다은/founder_explorer_agent.ipynb
+++ b/다은/founder_explorer_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "e73e7e1c",
    "metadata": {},
    "outputs": [],
@@ -22,15 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8eb4fe82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "4915a3b4",
    "metadata": {},
    "outputs": [],
@@ -41,12 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "bba4c20a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 그래프 상태 정의\n",
     "class GraphState(TypedDict):\n",
     "    company_name: Annotated[str, \"기업 이름\"]\n",
     "    domain: Annotated[str, \"기업 도메인\"]\n",
@@ -57,19 +48,22 @@
     "    sentiment_analysis: Annotated[str, \"평판 긍정/부정 분석\"]\n",
     "    final_summary: Annotated[str, \"최종 요약\"]\n",
     "    messages: Annotated[list[BaseMessage], \"메시지\"]\n",
-    "    relevance: Annotated[bool, \"관련성\"]\n"
+    "    relevance: Annotated[bool, \"관련성\"]\n",
+    "    retry_count: Annotated[int, \"재시도 횟수\"]  # 추가된 필드"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "9f204b7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 창업자 식별 에이전트\n",
     "def founder_identifier(state: GraphState) -> GraphState:\n",
-    "    print(f\"🔍 창업자 식별 에이전트: {state['company_name']} 창업자 식별 중...\")\n",
+    "    print(f\"🔍 창업자 식별 에이전트: {state['company_name']} 창업자 식별 중... (시도 #{state['retry_count']+1})\")\n",
+    "    \n",
+    "    # 재시도 횟수 증가\n",
+    "    current_retry = state['retry_count'] + 1\n",
     "    \n",
     "    search_query = f\"{state['company_name']} {state['domain']} 스타트업 창업자 CEO 대표 설립자\"\n",
     "    \n",
@@ -93,6 +87,13 @@
     "    다음 형식으로 응답해주세요:\n",
     "    창업자 이름: [이름]\n",
     "    창업자 역할: [역할 (예: CEO, 공동창업자, CTO 등)]\n",
+    "\n",
+    "    IMPORTANT: 반드시 정확한 이 기업의 창업자(설립자) 또는 현재 CEO의 이름과 역할을 추출해주세요.\n",
+    "\n",
+    "    IMPORTANT:\n",
+    "    기업의 창업자(설립자) 또는 현재 CEO를 못찾는 경우 반드시 아래와 같이 출력하세요\n",
+    "    창업자 이름: \"정보 없음\"\n",
+    "    창업자 역할: \"정보 없음\" \n",
     "    \"\"\"\n",
     "    \n",
     "    extraction_response = llm.invoke(extraction_prompt)\n",
@@ -112,13 +113,14 @@
     "    \n",
     "    return GraphState(\n",
     "        founder_name=founder_name,\n",
-    "        founder_role=founder_role\n",
+    "        founder_role=founder_role,\n",
+    "        retry_count=current_retry  # 재시도 횟수 업데이트\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "815380e0",
    "metadata": {},
    "outputs": [],
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "id": "0b735673",
    "metadata": {},
    "outputs": [],
@@ -185,6 +187,13 @@
     "    3. 주요 부정적 언급:\n",
     "    4. 전반적인 평판 판단:\n",
     "    5. 투자 관점에서의 시사점:\n",
+    "\n",
+    "    \n",
+    "    IMPORTANT: 창업자 이름: \"정보 없음\", 창업자 역할: \"정보 없음\" 인 경우에는 반드시 아래와 같이 출력해주세요\n",
+    "    다음 기업에 대한 창업자 정보를 충분히 찾지 못했습니다:\n",
+    "    기업명: {state['company_name']}\n",
+    "    도메인: {state['domain']}\n",
+    "\n",
     "    \"\"\"\n",
     "    \n",
     "    sentiment_response = llm.invoke(sentiment_prompt)\n",
@@ -200,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "id": "c989a4e7",
    "metadata": {},
    "outputs": [],
@@ -228,6 +237,12 @@
     "    3. 평판 분석 요약 (미디어/SNS에서의 이미지)\n",
     "    4. 강점 및 약점\n",
     "    5. 투자 관점에서의 시사점 (창업자 역량이 기업 성장에 미치는 영향)\n",
+    "\n",
+    "\n",
+    "    IMPORTANT:\n",
+    "    기업의 창업자(설립자) 또는 현재 CEO를 못찾는 경우 반드시 아래와 같이 출력하세요\n",
+    "    \"창업자의 정보를 충분히 찾지 못했습니다.\"\n",
+    "\n",
     "    \"\"\"\n",
     "    \n",
     "    summary_response = llm.invoke(summary_prompt)\n",
@@ -249,15 +264,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
+   "id": "04e60f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def none_summary_generator(state: GraphState) -> GraphState:\n",
+    "    print(f\"⚠️ {state['company_name']} 관련 충분한 정보를 찾지 못했습니다. 대체 요약 생성 중...\")\n",
+    "    \n",
+    "    # 고정된 메시지 생성\n",
+    "    fallback_summary = f\"\"\"다음 기업에 대한 창업자 정보를 충분히 찾지 못했습니다:\n",
+    "기업명: {state['company_name']}\n",
+    "도메인: {state['domain']}\n",
+    "\n",
+    "재시도 횟수 한계(10회)에 도달했으나 적절한 정보를 찾지 못했습니다.\n",
+    "직접적인 컨택이나 추가 조사를 통해 더 많은 정보를 수집하는 것을 권장합니다.\"\"\"\n",
+    "    \n",
+    "    # 메시지 생성\n",
+    "    messages = [\n",
+    "        HumanMessage(content=f\"{state['company_name']} ({state['domain']}) 기업 분석 시도 결과\"),\n",
+    "        AIMessage(content=fallback_summary)\n",
+    "    ]\n",
+    "    \n",
+    "    return GraphState(\n",
+    "        final_summary=fallback_summary,\n",
+    "        messages=messages\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "1a931e0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 창업자 식별 관련성 체크 함수\n",
     "def founder_relevance_check(state: GraphState) -> GraphState:\n",
-    "    print(\"⚖️ 창업자 식별 관련성 체크 중...\")\n",
-    "    \n",
+    "    print(f\"⚖️ 창업자 식별 관련성 체크 중... (시도 #{state['retry_count']})\")\n",
+    "\n",
     "    # 창업자 정보가 비어있거나 불충분한지 체크\n",
     "    if not state['founder_name'] or state['founder_name'].strip() == \"\":\n",
     "        print(\"❌ 창업자 정보를 찾을 수 없습니다.\")\n",
@@ -279,13 +323,12 @@
     "    \n",
     "    print(f\"창업자-기업 관련성 판단: {is_relevant}\")\n",
     "    \n",
-    "    return GraphState(relevance=is_relevant)\n",
-    "\n"
+    "    return GraphState(relevance=is_relevant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "id": "de59e45d",
    "metadata": {},
    "outputs": [],
@@ -314,22 +357,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "id": "779be7d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 조건부 라우팅 함수\n",
     "def is_relevant(state: GraphState) -> str:\n",
-    "    if state[\"relevance\"]:\n",
+    "    if state[\"retry_count\"] >= 5:\n",
+    "        print(\"🛑 최대 재시도 횟수(10회) 초과! 대체 요약으로 진행\")\n",
+    "        return \"none\"\n",
+    "    elif state[\"relevance\"]:\n",
     "        return \"yes\"\n",
     "    else:\n",
-    "        return \"no\"\n"
+    "        return \"no\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "id": "d40383dc",
    "metadata": {},
    "outputs": [],
@@ -344,6 +389,7 @@
     "workflow.add_node(\"profile_relevance_check\", profile_relevance_check)\n",
     "workflow.add_node(\"reputation_analyzer\", reputation_analyzer)\n",
     "workflow.add_node(\"summary_generator\", summary_generator)\n",
+    "workflow.add_node(\"none_summary_generator\", none_summary_generator)\n",
     "\n",
     "# 엣지 추가\n",
     "workflow.add_edge(START, \"founder_identifier\")\n",
@@ -353,20 +399,24 @@
     "    is_relevant,\n",
     "    {\n",
     "        \"yes\": \"profile_collector\",\n",
-    "        \"no\": \"founder_identifier\"  # 창업자 식별 실패 시 다시 시도\n",
+    "        \"no\": \"founder_identifier\",  # 재시도 카운터는 founder_identifier 내부에서 관리\n",
+    "        \"none\": \"none_summary_generator\"  # 재시도 횟수 초과 시 대체 요약\n",
     "    }\n",
     ")\n",
+    "\n",
     "workflow.add_edge(\"profile_collector\", \"profile_relevance_check\")\n",
     "workflow.add_conditional_edges(\n",
     "    \"profile_relevance_check\",\n",
     "    is_relevant,\n",
     "    {\n",
     "        \"yes\": \"reputation_analyzer\",\n",
-    "        \"no\": \"profile_collector\"  # 프로필 정보 관련성 없으면 다시 검색\n",
+    "        \"no\": \"founder_identifier\",  # 프로필 정보 관련성 없으면 다시 창업자 식별부터\n",
+    "        \"none\": \"none_summary_generator\"  # 재시도 횟수 초과 시 대체 요약\n",
     "    }\n",
     ")\n",
     "workflow.add_edge(\"reputation_analyzer\", \"summary_generator\")\n",
     "workflow.add_edge(\"summary_generator\", END)\n",
+    "workflow.add_edge(\"none_summary_generator\", END)\n",
     "\n",
     "# 그래프 컴파일\n",
     "memory = MemorySaver()\n",
@@ -375,14 +425,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "id": "ad64dfeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 실행 함수\n",
     "def analyze_startup_founder(company_name: str, domain: str):\n",
-    "    config = RunnableConfig(recursion_limit=10, configurable={\"thread_id\": random_uuid()})\n",
+    "    config = RunnableConfig(configurable={\"thread_id\": random_uuid()})\n",
     "    \n",
     "    inputs = GraphState(\n",
     "        company_name=company_name,\n",
@@ -394,24 +443,17 @@
     "        sentiment_analysis=\"\",\n",
     "        final_summary=\"\",\n",
     "        messages=[],\n",
-    "        relevance=False\n",
+    "        relevance=False,\n",
+    "        retry_count=0  # 초기 retry_count 설정\n",
     "    )\n",
     "\n",
     "    final_result = app.invoke(inputs, config)\n",
-    "    return final_result\n"
+    "    return final_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1fb46749",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "id": "deadf820",
    "metadata": {},
    "outputs": [
@@ -420,80 +462,80 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "올거나이즈 (AI) 기업의 창업자 분석을 시작합니다...\n",
+      "Abridge Digital Health (AI) 기업의 창업자 분석을 시작합니다...\n",
       "\n",
-      "🔍 창업자 식별 에이전트: 올거나이즈 창업자 식별 중...\n",
+      "🔍 창업자 식별 에이전트: Abridge Digital Health 창업자 식별 중... (시도 #1)\n",
       "Warning: days parameter is ignored for 'general' topic search. Set topic parameter to 'news' to use days.\n",
-      "✓ 식별된 창업자: 이창수 (CEO)\n",
-      "⚖️ 창업자 식별 관련성 체크 중...\n",
+      "✓ 식별된 창업자: Shiv Rao (CEO)\n",
+      "⚖️ 창업자 식별 관련성 체크 중... (시도 #1)\n",
       "창업자-기업 관련성 판단: True\n",
-      "🔍 정보 수집 에이전트: 이창수 정보 수집 중...\n",
+      "🔍 정보 수집 에이전트: Shiv Rao 정보 수집 중...\n",
       "Warning: days parameter is ignored for 'general' topic search. Set topic parameter to 'news' to use days.\n",
-      "✅ 이창수의 프로필 정보 수집 완료\n",
+      "✅ Shiv Rao의 프로필 정보 수집 완료\n",
       "⚖️ 프로필 정보 관련성 체크 중...\n",
       "프로필 정보 관련성 판단: True\n",
-      "🔍 평판 분석 에이전트: 이창수 평판 분석 중...\n",
-      "✅ 이창수의 평판 분석 완료\n",
-      "📝 요약 에이전트: 올거나이즈의 이창수 최종 요약 생성 중...\n",
-      "✅ 올거나이즈의 이창수 최종 요약 생성 완료\n",
-      "<class 'langgraph.pregel.io.AddableValuesDict'>\n"
+      "🔍 평판 분석 에이전트: Shiv Rao 평판 분석 중...\n",
+      "✅ Shiv Rao의 평판 분석 완료\n",
+      "📝 요약 에이전트: Abridge Digital Health의 Shiv Rao 최종 요약 생성 중...\n",
+      "✅ Abridge Digital Health의 Shiv Rao 최종 요약 생성 완료\n",
+      "\n",
+      "최종 분석 결과:\n",
+      "1. **창업자 기본 정보**\n",
+      "   - 이름: Shiv Rao\n",
+      "   - 역할: CEO\n",
+      "   - 기업명: Abridge Digital Health\n",
+      "\n",
+      "2. **창업자 이력 요약**\n",
+      "   - 학력: Carnegie Mellon University에서 학사 학위를 받았으며, University of Michigan과 University of Pittsburgh에서 의학 교육을 마쳤습니다.\n",
+      "   - 경력: UPMC Enterprises에서 제공자 중심의 기술 투자 포트폴리오를 관리하는 부사장으로 근무했으며, 현재 UPMC의 심장 및 혈관 연구소에서 심장 전문의로 활동하고 있습니다.\n",
+      "   - 성과: Abridge를 공동 설립하여 AI 기반 임상 문서화 솔루션을 개발하고, 여러 주요 의료 기관과의 협력을 통해 플랫폼을 확장하고 있습니다.\n",
+      "   - 현재 직책: Abridge Digital Health의 CEO\n",
+      "\n",
+      "3. **평판 분석 요약**\n",
+      "   - Shiv Rao는 AI를 활용한 임상 문서화 분야에서 긍정적인 평판을 얻고 있습니다. Abridge의 플랫폼은 여러 주요 의료 기관에서 채택되고 있으며, 환자 경험과 임상 효율성을 개선하는 데 기여하고 있습니다. 시장의 과포화와 관련된 우려가 있지만, 전반적으로 긍정적인 평가를 받고 있습니다.\n",
+      "\n",
+      "4. **강점 및 약점**\n",
+      "   - 강점: Abridge의 AI 플랫폼은 의료 대화를 정확한 임상 문서로 변환하여 인지적 부담을 줄이고 환자 경험을 개선합니다. 다국어 지원과 50개 이상의 전문 분야를 포괄하며, 다양한 의료 환경에서 운영됩니다. 또한, OpenNotes와의 협력을 통해 환자 이해도를 높이는 AI 생성 방문 요약을 개발하고 있습니다.\n",
+      "   - 약점: AI 서기 시장의 과포화로 인해 차별화가 중요해지고 있으며, 시장 통합이 예상됩니다. 일부 보고서에서는 AI 서기가 예상만큼 효율성을 높이지 못할 수 있다고 언급됩니다.\n",
+      "\n",
+      "5. **투자 관점에서의 시사점**\n",
+      "   - Abridge Digital Health는 AI 기반 임상 문서화 솔루션을 통해 의료 산업에서 중요한 역할을 하고 있으며, 여러 주요 의료 기관과의 협력을 통해 입지를 강화하고 있습니다. 시장의 과포화와 통합 가능성에도 불구하고, Abridge의 기술력과 시장 내 위치는 긍정적인 투자 기회를 제공할 수 있습니다. Shiv Rao의 의료 및 기술 분야에서의 경험과 리더십은 기업의 성장에 긍정적인 영향을 미칠 것으로 예상됩니다.\n"
      ]
     }
    ],
    "source": [
     "# 실행 예시\n",
     "if __name__ == \"__main__\":\n",
-    "    # company_name = input(\"분석할 AI 스타트업 기업명을 입력하세요: \")\n",
-    "    # domain = input(\"기업 도메인 분야를 입력하세요(예: AI, 헬스케어, 핀테크 등): \")\n",
-    "    company_name = \"올거나이즈\"\n",
+    "    company_name = \"Abridge Digital Health\"\n",
     "    domain = \"AI\"\n",
     "    \n",
     "    print(f\"\\n{company_name} ({domain}) 기업의 창업자 분석을 시작합니다...\\n\")\n",
     "    result = analyze_startup_founder(company_name, domain)\n",
     "\n",
-    "    print(type(result))\n",
-    "    \n",
-    "    # print(\"\\n최종 분석 결과:\")\n",
-    "    # if \"final_summary\" in result:\n",
-    "    #     print(result[\"final_summary\"])\n",
-    "    # else:\n",
-    "    #     print(\"분석 결과가 없습니다. 다시 시도해 주세요.\")\n",
+    "    print(\"\\n최종 분석 결과:\")\n",
+    "\n",
+    "\n",
+    "    if \"final_summary\" in result:\n",
+    "        print(result[\"final_summary\"])\n",
+    "    else:\n",
+    "        print(\"분석 결과가 없습니다. 다시 시도해 주세요.\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "becd6b9d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "langgraph.pregel.io.AddableValuesDict"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "930e6c84",
+   "id": "320b5bc6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.11.9",
+   "display_name": "boost",
    "language": "python",
    "name": "python3"
   },
@@ -507,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
